# email_sendler

./: .gitignore  pyproject.toml  requirements.txt
configs/: email_constants.py  logger.py  paths.py
src/email_recipients/: config_validator.py  email_recipients.py  exeptions.py
src/email_recipients/tests/: conftest.py  test_config_validator.py  test_email_recipients.py
src/email_sendler/: abstract_email_sender.py  email_sender_with_attachments.py  email_sender_without_attachments.py  email_service.py  exceptions.py
